--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "main": "main.ts",
   "scripts": {
     "dev": "nodemon ./src/main.ts",
-    "api-docs": "node ./src/swagger.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "api-docs": "node ./src/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/js-cookie": "^3.0.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
