--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.74.7",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "i18n-iso-countries": "^7.14.0",
     "jotai": "^2.12.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
